--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <div class="main-container" id="app">
 
-        <input type="text" v-model="message">
+        <input type="checkbox" v-model="success">
 
-        <div class="ui success message" v-if="success">
+        <div class="ui  message" :style="style()">
             <i class="close icon" @click="close"></i>
             <p>{{ message }}</p>
         </div>
