--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
 
     <div class="main-container" id="app">
 
-        <input type="checkbox" v-model="success">
-
-        <div class="ui  message" :style="style()">
-            <i class="close icon" @click="close"></i>
-            <p>{{ message }}</p>
-        </div>
-
+        {{ seconds }}
 
     </div>
 
